made updates to incorporate listeners and more general clean up

--- a/data-explore.ipynb
+++ b/data-explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,9 +166,14 @@
     "    parts = os.path.basename(filename).split(\"_\")\n",
     "    return parts[-3].replace(\".csv\",\"\") #third to last part is the group by value\n",
     "\n",
+    "def extract_measure_from_filename(filename):\n",
+    "    parts = os.path.basename(filename).split(\"_\")\n",
+    "    return parts[0]\n",
+    "\n",
     "def load_all_csvs():\n",
-    "    all_files = glob.glob(os.path.join(\"parsed csvs\", \"plays_by_*.csv\"))\n",
+    "    all_files = glob.glob(os.path.join(\"parsed csvs\", \"*_by_*.csv\"))\n",
     "    dataframes = []\n",
+    "    empty_files = []\n",
     "    \n",
     "    for file in all_files:\n",
     "        try:\n",
@@ -176,7 +181,7 @@
     "            if os.path.getsize(file) <= 1:\n",
     "                print(f\"Skipping empty file: {file}\")\n",
     "                continue\n",
-    "                \n",
+    "            measure = extract_measure_from_filename(file)    \n",
     "            week = extract_week_from_filename(file)\n",
     "            song_id = extract_song_id_from_filename(file)\n",
     "            group_by = extract_group_by_from_filename(file)\n",
@@ -198,6 +203,14 @@
     "            print(f\"Error reading file {file}: {str(e)}\")\n",
     "            continue\n",
     "    \n",
+    "    if empty_files:\n",
+    "        with open(\"empty_files_to_rescrape.txt\", \"w\") as f:\n",
+    "            f.write(\"# Run these commands to re-scrape empty files:\\n\")\n",
+    "            for song_id, week in empty_files:\n",
+    "                command = f\"python run-export.py --force {week} {song_id}\\n\"\n",
+    "                f.write(command)\n",
+    "        print(f\"\\nEmpty files list saved to empty_files_to_rescrape.txt\")\n",
+    "\n",
     "    if not dataframes:\n",
     "        raise ValueError(\"No valid data files were found!\")\n",
     "        \n",
@@ -235,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -267,104 +280,94 @@
        "      <th>Song</th>\n",
        "      <th>Song ID</th>\n",
        "      <th>Grouping</th>\n",
+       "      <th>Measure</th>\n",
        "      <th>Δ Plays</th>\n",
        "      <th>% Δ</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
+       "      <th>666</th>\n",
        "      <td>All Cities</td>\n",
        "      <td>4</td>\n",
-       "      <td>37</td>\n",
-       "      <td>+825%</td>\n",
-       "      <td>2023-11-10</td>\n",
-       "      <td>Cycles</td>\n",
-       "      <td>1711474233</td>\n",
-       "      <td>city</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>All Cities</td>\n",
-       "      <td>37</td>\n",
-       "      <td>13</td>\n",
-       "      <td>-65%</td>\n",
-       "      <td>2023-11-17</td>\n",
-       "      <td>Cycles</td>\n",
-       "      <td>1711474233</td>\n",
-       "      <td>city</td>\n",
-       "      <td>-24.0</td>\n",
-       "      <td>-64.864865</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>All Cities</td>\n",
-       "      <td>13</td>\n",
-       "      <td>16</td>\n",
-       "      <td>+23%</td>\n",
-       "      <td>2023-11-24</td>\n",
-       "      <td>Cycles</td>\n",
-       "      <td>1711474233</td>\n",
-       "      <td>city</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>23.076923</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>All Cities</td>\n",
-       "      <td>16</td>\n",
        "      <td>6</td>\n",
-       "      <td>-63%</td>\n",
-       "      <td>2023-12-01</td>\n",
-       "      <td>Cycles</td>\n",
-       "      <td>1711474233</td>\n",
-       "      <td>city</td>\n",
-       "      <td>-10.0</td>\n",
-       "      <td>-62.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>All Cities</td>\n",
-       "      <td>6</td>\n",
-       "      <td>9</td>\n",
        "      <td>+50%</td>\n",
-       "      <td>2023-12-08</td>\n",
-       "      <td>Cycles</td>\n",
-       "      <td>1711474233</td>\n",
+       "      <td>2025-04-04</td>\n",
+       "      <td>Althea</td>\n",
+       "      <td>1748029276</td>\n",
        "      <td>city</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>50.000000</td>\n",
+       "      <td>listeners</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-14.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>668</th>\n",
+       "      <td>All Cities</td>\n",
+       "      <td>6</td>\n",
+       "      <td>16</td>\n",
+       "      <td>+167%</td>\n",
+       "      <td>2025-04-11</td>\n",
+       "      <td>Althea</td>\n",
+       "      <td>1748029276</td>\n",
+       "      <td>city</td>\n",
+       "      <td>listeners</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-15.789474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>672</th>\n",
+       "      <td>All Cities</td>\n",
+       "      <td>257</td>\n",
+       "      <td>39</td>\n",
+       "      <td>-85%</td>\n",
+       "      <td>2025-04-04</td>\n",
+       "      <td>That Thing</td>\n",
+       "      <td>1807227251</td>\n",
+       "      <td>city</td>\n",
+       "      <td>listeners</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>-26.415094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>674</th>\n",
+       "      <td>All Cities</td>\n",
+       "      <td>39</td>\n",
+       "      <td>162</td>\n",
+       "      <td>+315%</td>\n",
+       "      <td>2025-04-11</td>\n",
+       "      <td>That Thing</td>\n",
+       "      <td>1807227251</td>\n",
+       "      <td>city</td>\n",
+       "      <td>listeners</td>\n",
+       "      <td>-18.0</td>\n",
+       "      <td>-10.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          City  Previous Period  Current Period % Change       Week    Song  \\\n",
-       "47  All Cities                4              37    +825% 2023-11-10  Cycles   \n",
-       "48  All Cities               37              13     -65% 2023-11-17  Cycles   \n",
-       "49  All Cities               13              16     +23% 2023-11-24  Cycles   \n",
-       "50  All Cities               16               6     -63% 2023-12-01  Cycles   \n",
-       "51  All Cities                6               9     +50% 2023-12-08  Cycles   \n",
+       "           City  Previous Period  Current Period % Change       Week  \\\n",
+       "666  All Cities                4               6     +50% 2025-04-04   \n",
+       "668  All Cities                6              16    +167% 2025-04-11   \n",
+       "672  All Cities              257              39     -85% 2025-04-04   \n",
+       "674  All Cities               39             162    +315% 2025-04-11   \n",
        "\n",
-       "       Song ID Grouping  Δ Plays        % Δ  \n",
-       "47  1711474233     city      NaN        NaN  \n",
-       "48  1711474233     city    -24.0 -64.864865  \n",
-       "49  1711474233     city      3.0  23.076923  \n",
-       "50  1711474233     city    -10.0 -62.500000  \n",
-       "51  1711474233     city      3.0  50.000000  "
+       "           Song     Song ID Grouping    Measure  Δ Plays        % Δ  \n",
+       "666      Althea  1748029276     city  listeners     -1.0 -14.285714  \n",
+       "668      Althea  1748029276     city  listeners     -3.0 -15.789474  \n",
+       "672  That Thing  1807227251     city  listeners    -14.0 -26.415094  \n",
+       "674  That Thing  1807227251     city  listeners    -18.0 -10.000000  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('song_velocity_table.csv', parse_dates=[\"Week\"])\n",
-    "df[(df.City==\"All Cities\") & (df.Song==\"Cycles\")].head()"
+    "df[(df.City==\"All Cities\") & (df.Measure==\"listeners\")].head()"
    ]
   },
   {
